--- a/yorku/desn3005/siaff/index.html
+++ b/yorku/desn3005/siaff/index.html
@@ -209,7 +209,7 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
                                 </model-viewer>                                 
                             </figure>                                 
                         </div>
-                        
+
                             </div>                             
 
                             <div id="mobileContainer">
@@ -227,8 +227,8 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
                         </div>
 
                         <!-- 3d models -->
-                        <div class="mobileContainer-phone-hidden">
-                            <figure id="award-center">
+                        <div id="award-center" class="mobileContainer-phone-hidden">
+                            <figure>
                                 <model-viewer
                                 tabindex="-1"
                                 class="switch-model1"
