--- a/yorku/desn3005/siaff/index.html
+++ b/yorku/desn3005/siaff/index.html
@@ -228,7 +228,7 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
 
                         <!-- 3d models -->
                         <div id="award-center" class="mobileContainer-phone-hidden">
-                            <figure class="height100">
+                            <figure class="height100 width100">
                                 <model-viewer
                                 tabindex="-1"
                                 class="switch-model1"
