--- a/yorku/desn3005/siaff/index.html
+++ b/yorku/desn3005/siaff/index.html
@@ -27,6 +27,10 @@
 
 <main>
 
+    <aside class="backto-top">
+        <img src="media/arrow-up.svg" alt="Back to Page Top">
+    </aside>
+
     <section id="heroSection">
         <div id="fadeContainer">
             <div class="fade">
@@ -502,7 +506,7 @@ Every year a new theme is dedicated to the spirit of architecture. This year, th
                         <p>Art house MOMO</p>
                         <p>52 이화여자대학교 ECC B402</p>
                         <p>647-693-3400, info@siaffkr.com</p>
-                        <p class="copyright">Copyright © 2025, Richard Lau. All rights reserved 2025</p>
+                        <p class="copyright">Copyright © 2025, Richard Lau. All rights reserved.</p>
                     </div>
                 </div>
             </section>
