--- a/yorku/desn3005/siaff-kr/index.html
+++ b/yorku/desn3005/siaff-kr/index.html
@@ -335,7 +335,7 @@
                             <img src="media/shop/item1.png" alt="SIAFF 토트백 - 패브릭">
                         </div>
                         <h3 class="notoRegular">SIAFF 토트백 - 패브릭</h3>
-                        <p class="notoNormal">$24.99</p>
+                        <p class="notoNormal">26,110원</p>
                     </li>
 
                     <li class="shopItem reveal" tabindex="0">
@@ -343,7 +343,7 @@
                             <img src="media/shop/item2.png" alt="SIAFF “I Love Buildings” 캡 - EN">
                         </div>
                         <h3 class="notoRegular">SIAFF “I Love Buildings” 캡 - EN</h3>
-                        <p class="notoNormal">$22.99</p>
+                        <p class="notoNormal">24,010원</p>
                     </li>
 
                     <li class="shopItem reveal" tabindex="0">
@@ -351,7 +351,7 @@
                             <img src="media/shop/item3.png" alt="SIAFF “I Love Buildings” 캡 - KR">
                         </div>
                         <h3 class="notoRegular">SIAFF “I Love Buildings” 캡 - KR</h3>
-                        <p class="notoNormal">$22.99</p>
+                        <p class="notoNormal">24,010원</p>
                     </li>
 
                     <li class="shopItem reveal" tabindex="0">
@@ -359,7 +359,7 @@
                             <img src="media/shop/item4.png" alt="SIAFF '밸런스' 메탈 포스터">
                         </div>
                         <h3 class="notoRegular">SIAFF '밸런스' 메탈 포스터</h3>
-                        <p class="notoNormal">$14.99</p>
+                        <p class="notoNormal">15,650원</p>
                     </li>
 
                     <li class="shopItem reveal" tabindex="0">
@@ -367,7 +367,7 @@
                             <img src="media/shop/item5.png" alt="SIAFF 증강현실 전체 카드 세트">
                         </div>
                         <h3 class="notoRegular">SIAFF 증강현실 전체 카드 세트</h3>
-                        <p class="notoNormal">$17.99</p>
+                        <p class="notoNormal">18,790원</p>
                     </li>
 
                     <li class="shopItem reveal" tabindex="0">
@@ -375,7 +375,7 @@
                             <img src="media/shop/item6.png" alt="SIAFF ‘밸런스’ 코튼 스웨터">
                         </div>
                         <h3 class="notoRegular">SIAFF ‘밸런스’ 코튼 스웨터</h3>
-                        <p class="notoNormal">$34.99</p>
+                        <p class="notoNormal">36,540원</p>
                     </li>
                 </ul>
                 <a href="#" id="view-more" class="notoRegular" role="button">더 보기</a>
