--- a/yorku/desn3005/siaff-kr/index.html
+++ b/yorku/desn3005/siaff-kr/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <!-- Designed and coded by Richard Lau -->
 
 <head>
@@ -97,11 +97,11 @@
                 </a>
 
                 <ul class="nav-links notoRegular">
-                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">프로그램</a></li>
-                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">소식</a></li>
-                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">시상</a></li>
+                    <li class="mobile-hidden-nav"><a href="https://richardlau.ca/yorku/desn3005/siaff-kr/schedule" class="nav-hover">프로그램</a></li>
+                    <li class="mobile-hidden-nav"><a href="https://richardlau.ca/yorku/desn3005/siaff-kr/map" class="nav-hover">지도</a></li>
+                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">시상 내역</a></li>
                     <li class="mobile-hidden-nav"><a href="#" class="nav-hover">스토어</a></li>
-                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">소개</a></li>                              
+                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">소개</a></li>
                     <li class="button-white"><a href="#">참가 신청</a></li>
 
                     <li>
