--- a/yorku/desn3005/siaff-en/index.html
+++ b/yorku/desn3005/siaff-en/index.html
@@ -98,8 +98,8 @@
                 </a>
 
                 <ul class="nav-links notoRegular">
-                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">PROGRAM</a></li>
-                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">NEWS</a></li>
+                    <li class="mobile-hidden-nav"><a href="https://richardlau.ca/yorku/desn3005/siaff-en/schedule" class="nav-hover">PROGRAM</a></li>
+                    <li class="mobile-hidden-nav"><a href="https://richardlau.ca/yorku/desn3005/siaff-en/map" class="nav-hover">MAP</a></li>
                     <li class="mobile-hidden-nav"><a href="#" class="nav-hover">AWARDS</a></li>
                     <li class="mobile-hidden-nav"><a href="#" class="nav-hover">SHOP</a></li>
                     <li class="mobile-hidden-nav"><a href="#" class="nav-hover">ABOUT</a></li>                              
