--- a/yorku/desn3005/ar-model-tracking.html
+++ b/yorku/desn3005/ar-model-tracking.html
@@ -25,8 +25,8 @@
         margin: 0;
         overflow: hidden;
         width: 100%;
-        height: 100%;
-        background: #000;
+        height: 100vh;
+        background: transparent;
       }
     </style>
   </head>
@@ -45,7 +45,7 @@
         <a-entity 
             gltf-model="url(siaff-en/models/pieceA/towerofescher.glb)"
             position="0 0 0"
-            scale="0.25 0.25 0.25"
+            scale="0.5 0.5 0.5"
             rotation="0 0 0">
         </a-entity>
 
