--- a/yorku/desn3005/ar-model-tracking.html
+++ b/yorku/desn3005/ar-model-tracking.html
@@ -43,9 +43,9 @@
 
         <!-- 3D model (GLB) -->
         <a-entity 
-            gltf-model="url(siaff-en/models/pieceA/towerofescher.glb)"
+            gltf-model="url(towerofescher-small.glb)"
             position="0 0 0"
-            scale="0.5 0.5 0.5"
+            scale="1 1 1"
             rotation="0 0 0">
         </a-entity>
 
