--- a/yorku/desn3005/ar-model-tracking.html
+++ b/yorku/desn3005/ar-model-tracking.html
@@ -1,58 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DESN3005 Augmented Reality</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WebXR AR Example</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
+</head>
+<body>
 
-    <link rel="icon" href="../media/RL.png" type="image/png">
-    <link rel="stylesheet" href="../portfolioStyles/siteToolkit.css">
-    <link rel="stylesheet" href="../projects.css">
-    <link rel="stylesheet" href="style.css">
+<script type="module">
+  import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.164.0/build/three.module.js';
+  import { ARButton } from 'https://cdn.jsdelivr.net/npm/three@0.164.0/examples/jsm/webxr/ARButton.js';
 
-  <!-- Open Graph tags -->
-  <meta property="og:title" content="SIAFF AR EXPERIENCE">
-  <meta property="og:description" content="Augmented Reality Experience, coded by Richard Lau.">
-  <meta property="og:url" content="https://richardlau.ca/yorku/desn3005/arexperience">
-  <meta property="og:type" content="website">    
+  // Scene, Camera, Renderer
+  const scene = new THREE.Scene();
+  const camera = new THREE.PerspectiveCamera(70, window.innerWidth/window.innerHeight, 0.01, 20);
 
- <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  renderer.xr.enabled = true;
+  document.body.appendChild(renderer.domElement);
 
-    <style>
-      body, html {
-        margin: 0;
-        overflow: hidden;
-        width: 100%;
-        height: 100vh;
-        background: transparent;
+  // AR Button
+  document.body.appendChild(ARButton.createButton(renderer, { requiredFeatures: ['hit-test'] }));
+
+  // Light
+  const light = new THREE.HemisphereLight(0xffffff, 0xbbbbff, 1);
+  light.position.set(0.5, 1, 0.25);
+  scene.add(light);
+
+  // Cube
+  const geometry = new THREE.BoxGeometry(0.1, 0.1, 0.1);
+  const material = new THREE.MeshStandardMaterial({ color: 0x00ff00 });
+  const cube = new THREE.Mesh(geometry, material);
+
+  let hitTestSource = null;
+  let localReferenceSpace = null;
+  let reticle = new THREE.Mesh(
+    new THREE.RingGeometry(0.07, 0.09, 32).rotateX(-Math.PI / 2),
+    new THREE.MeshBasicMaterial({ color: 0xffffff })
+  );
+  reticle.visible = false;
+  scene.add(reticle);
+
+  // AR Session
+  renderer.xr.addEventListener('sessionstart', async () => {
+    const session = renderer.xr.getSession();
+    const viewerSpace = await session.requestReferenceSpace('viewer');
+    hitTestSource = await session.requestHitTestSource({ space: viewerSpace });
+    localReferenceSpace = await session.requestReferenceSpace('local');
+  });
+
+  renderer.xr.addEventListener('sessionend', () => {
+    hitTestSource = null;
+    localReferenceSpace = null;
+  });
+
+  // Animate
+  renderer.setAnimationLoop(function(timestamp, frame) {
+    if (frame) {
+      const referenceSpace = localReferenceSpace;
+      const session = renderer.xr.getSession();
+      const hitTestResults = frame.getHitTestResults(hitTestSource);
+
+      if (hitTestResults.length) {
+        const hit = hitTestResults[0];
+        const pose = hit.getPose(referenceSpace);
+        reticle.visible = true;
+        reticle.position.set(pose.transform.position.x, pose.transform.position.y, pose.transform.position.z);
+        reticle.updateMatrixWorld(true);
+      } else {
+        reticle.visible = false;
       }
-    </style>
-  </head>
+    }
 
-  <body>
-    <a-scene
-      vr-mode-ui="enabled: false"
-      embedded
-      arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-    >
+    renderer.render(scene, camera);
+  });
 
-      <!-- Marker using a QR-style .patt file -->
-      <a-marker type="pattern" url="marker.patt">
+  // Place cube on tap
+  window.addEventListener('click', () => {
+    if (reticle.visible) {
+      cube.position.copy(reticle.position);
+      scene.add(cube);
+    }
+  });
 
-        <!-- 3D model (GLB) -->
-        <a-entity 
-            gltf-model="url(towerofescher-small.glb)"
-            position="0 0 0"
-            scale="1 1 1"
-            rotation="0 0 0">
-        </a-entity>
+  window.addEventListener('resize', () => {
+    camera.aspect = window.innerWidth / window.innerHeight;
+    camera.updateProjectionMatrix();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+  });
 
-      </a-marker>
+</script>
 
-      <!-- A camera for AR -->
-      <a-entity camera></a-entity>
-    </a-scene>
-  </body>
+</body>
 </html>
