--- a/yorku/desn3005/ar-model-tracking.html
+++ b/yorku/desn3005/ar-model-tracking.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR.js Fresh Start</title>
+  <title>AR.js with GLB Model</title>
 
   <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
@@ -23,10 +23,21 @@
     renderer="logarithmicDepthBuffer: true; antialias: true;"
     arjs="sourceType: webcam; debugUIEnabled: false;"
   >
+
+    <!-- Preload GLB model -->
+    <a-assets>
+      <a-asset-item id="tower-model" src="towerofescher-small.glb"></a-asset-item>
+    </a-assets>
+
     <!-- Marker -->
     <a-marker type="pattern" url="marker.patt">
-      <!-- 3D Object -->
-      <a-box position="0 0.5 0" material="color: red;"></a-box>
+      <!-- 3D Model -->
+      <a-entity 
+        gltf-model="#tower-model" 
+        scale="0.5 0.5 0.5" 
+        position="0 0 0" 
+        rotation="0 0 0">
+      </a-entity>
     </a-marker>
 
     <!-- Camera -->
