--- a/yorku/desn3005/ar-model-tracking.html
+++ b/yorku/desn3005/ar-model-tracking.html
@@ -26,7 +26,7 @@
 
     <!-- Preload GLB model -->
     <a-assets>
-      <a-asset-item id="tower-model" src="towerofescher-small.glb"></a-asset-item>
+      <a-asset-item id="tower-model" src="https://www.richardlau.ca/yorku/desn3005/towerofescher-small.glb"></a-asset-item>
     </a-assets>
 
     <!-- Marker -->
@@ -34,7 +34,7 @@
       <!-- 3D Model -->
       <a-entity 
         gltf-model="#tower-model" 
-        scale="0.5 0.5 0.5" 
+        scale="1 1 1" 
         position="0 0 0" 
         rotation="0 0 0">
       </a-entity>
