--- a/yorku/desn3005/ar-model-tracking.html
+++ b/yorku/desn3005/ar-model-tracking.html
@@ -30,12 +30,12 @@
     </a-assets>
 
     <!-- Marker -->
-    <a-marker type="pattern" url="marker.patt">
+    <a-marker type="pattern" url="https://www.richardlau.ca/yorku/desn3005/marker.patt">
       <!-- 3D Model -->
       <a-entity 
         gltf-model="#tower-model" 
-        scale="1 1 1" 
-        position="0 0 0" 
+        scale=".1 .1 .1" 
+        position="0 0.5 0" 
         rotation="0 0 0">
       </a-entity>
     </a-marker>
