--- a/yorku/desn3005/siaff-kr/schedule/index.html
+++ b/yorku/desn3005/siaff-kr/schedule/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <!-- Designed and coded by Richard Lau -->
 
 <head>
@@ -25,17 +25,17 @@
 
         <header class="navigationBar">      
             <nav class="marginProperties">
-                <a href="https://richardlau.ca/yorku/desn3005/siaff-en" id="logo">
+                <a href="https://richardlau.ca/yorku/desn3005/siaff-kr" id="logo">
                 <img src="../media/txt/siaff.svg" alt="SIAFF logo">
                 </a>
 
                 <ul class="nav-links notoRegular">
-                    <li class="mobile-hidden-nav"><a href="https://richardlau.ca/yorku/desn3005/siaff-en/schedule" class="nav-hover">PROGRAM</a></li>
-                    <li class="mobile-hidden-nav"><a href="https://richardlau.ca/yorku/desn3005/siaff-en/map" class="nav-hover">MAP</a></li>
-                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">AWARDS</a></li>
-                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">SHOP</a></li>
-                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">ABOUT</a></li>                              
-                    <li class="button-white"><a href="#">REGISTER</a></li>
+                    <li class="mobile-hidden-nav"><a href="https://richardlau.ca/yorku/desn3005/siaff-kr/schedule" class="nav-hover">프로그램</a></li>
+                    <li class="mobile-hidden-nav"><a href="https://richardlau.ca/yorku/desn3005/siaff-kr/map" class="nav-hover">지도</a></li>
+                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">시상 내역</a></li>
+                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">스토어</a></li>
+                    <li class="mobile-hidden-nav"><a href="#" class="nav-hover">소개</a></li>                              
+                    <li class="button-white"><a href="#">참가 신청</a></li>
 
                     <li>
                         <div class="lang-group">
@@ -62,15 +62,15 @@
             </div>          
             <div id="herocontainer">   
                 <div id="heroTitle">   
-                    <h1 class="img-txt-header">
-                        <img src="media-schedule/txt/schedule.svg" alt="SCHEDULE DOWNLOAD">
+                    <h1 class="img-txt-header notoMedium">
+                        이벤트 일정
                     </h1>
                     <div class="schedule-download-row">
-                        <a href="https://richardlau.ca/yorku/desn3005/siaff-en/schedule/day1" class="download-button notoMedium">DAY 01</a>
-                        <a href="https://richardlau.ca/yorku/desn3005/siaff-en/schedule/day2" class="download-button notoMedium">DAY 02</a>
-                        <a href="https://richardlau.ca/yorku/desn3005/siaff-en/schedule/day3" class="download-button notoMedium">DAY 03</a>
+                        <a href="https://richardlau.ca/yorku/desn3005/siaff-kr/schedule/day1" class="download-button notoMedium">01 일차</a>
+                        <a href="https://richardlau.ca/yorku/desn3005/siaff-kr/schedule/day2" class="download-button notoMedium">02 일차</a>
+                        <a href="https://richardlau.ca/yorku/desn3005/siaff-kr/schedule/day3" class="download-button notoMedium">03 일차</a>
                     </div>
-                    <p class="notoRegular">Check out the schedule for the day!</p>
+                    <p class="notoRegular">오늘 일정 확인해보세요!</p>
                 </div> 
             </div>
             <div class="fade" id="fadebottom">
@@ -101,10 +101,10 @@
 
                 <div id="footer-right">
                     <div id="footer-site-information" class="notoRegular">
-                        <p>Art house MOMO</p>
+                        <p>아트하우스 모모</p>
                         <p>52 이화여자대학교 ECC B402</p>
                         <p>647-693-3400, info@siaffkr.com</p>
-                        <p class="copyright">Copyright © 2025, Richard Lau. All rights reserved.</p>
+                        <p class="copyright">저작권 © 2025 Richard Lau. 모든 권리 보유.</p>
                     </div>
                 </div>
             </section>
@@ -112,7 +112,7 @@
         
             <div id="map-container">
                 <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.7113877220822!2d126.94425897618588!3d37.56186302439557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9884f66a1abb%3A0x5f0fd2b3810d9bd1!2sArt%20house%20MOMO!5e0!3m2!1sen!2sca!4v1763501984691!5m2!1sen!2sca" 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.7113877220822!2d126.94425897618588!3d37.56186302439557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9884f66a1abb%3A0x5f0fd2b3810d9bd1!2z7JWE7Yq47ZWY7Jqw7IqkIOuqqOuqqA!5e0!3m2!1sko!2sca!4v1763671829392!5m2!1sko!2sca" 
                     id="map" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                 </iframe>   
             </div>    
