--- a/artofvisualdata-typeface/index.html
+++ b/artofvisualdata-typeface/index.html
@@ -274,8 +274,7 @@
       <article class="text-and-image regular-gap">
 
         <figure class="image-flex-1 fadeinup">
-          <img src="caseStudy/illustrator-file-sketches.png" alt="Illustrator file of typeface sketches" 
-          class="mockupImage">
+          <img src="caseStudy/illustrator-file-sketches.png" alt="Illustrator file of typeface sketches" class="mockupImage">
         </figure>  
 
         <div class="text-and-image-gap"></div>
@@ -303,8 +302,7 @@
           effort to create, for it often had been in a geometrically unbalanced condition from the grid.</p>
         </div>
         <figure class="lighter-gap fadeinup">
-          <img src="caseStudy/letter-s-sketches.png" alt="Illustrator file of typeface sketches on the letter S." 
-          class="mockupImage">
+          <img src="caseStudy/letter-s-sketches.png" alt="Illustrator file of typeface sketches on the letter S." class="mockupImage">
         </figure>         
         </article> 
 
