--- a/home.html
+++ b/home.html
@@ -44,10 +44,10 @@
 <main>
 
       <div class="dragSection">
-        <img src="media/collageSelf.png" class="draggable" id="A1">
-        <img src="media/awardwinner.png" class="draggable" id="A2">
-        <img src="media/waterlooSelf.png" class="draggable" id="A3">
-        <img src="media/dragIcon.svg" class="draggable" id="A4">
+        <img src="media/collageSelf.png" alt="Richard Lau portrait in a collage style" class="draggable" id="A1">
+        <img src="media/awardwinner.png" alt="Laptop with data from Art of Visual Data website with 2025 RGD Student Award Winning Sticker" class="draggable" id="A2">
+        <img src="media/waterlooSelf.png" alt="Richard Lau on a Dinosaur at Waterloo" class="draggable" id="A3">
+        <img src="media/dragIcon.svg" alt="Drag Icon Indicator" class="draggable" id="A4">
       </div>
 
   <!-- This is our hero section. -->
