--- a/home.html
+++ b/home.html
@@ -113,7 +113,9 @@
       <article class="project2 fadeinup">
         <a href="https://richardlau.ca/artofvisualdata-typeface"><span class="visually-hidden">View project: Art of Visual Data Typeface</span>  
           <div class="thumbnailParent">
-            <img src="media/aovd-booklet-mockup.png" alt="Type Specimen booklet about the typeface called Art of Visual Data." class="Thumbnail2"></img>
+            <video aria-label="Type Specimen booklet about the typeface called Art of Visual Data." class="Thumbnail" autoplay muted loop playsinline>
+              <source src="media/type-specimen-booklet-web-cover.webm" type="video/mp4">
+            </video>          
           </div>
         </a>
         <header class="projectHeaders">
